--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-5 col-md-3">
+            <div class="log-in-center">
                 <div class="form-login">
                 <h4>Welcome back.</h4>
                 <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username" />
