--- a/index.html
+++ b/index.html
@@ -25,183 +25,24 @@
 </head>
 
 <body>
-    <!--
-User Profile Sidebar by @keenthemes
-A component of Metronic Theme - #1 Selling Bootstrap 3 Admin Theme in Themeforest: http://j.mp/metronictheme
-Licensed under MIT
--->
-
-<div class="container">
-    <div class="row profile">
-        <div class="col-md-3">
-            <div class="profile-sidebar">
-                <!-- SIDEBAR USERPIC -->
-                <div class="profile-userpic">
-                    <img src="assets/img/profile_user.jpg" class="img-responsive" alt="">
+    <div class="container">
+        <div class="row">
+            <div class="log-in-center">
+                <div class="form-login">
+                <h4>Welcome back.</h4>
+                <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username" />
+                </br>
+                <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password" />
+                </br>
+                <div class="wrapper">
+                <span class="group-btn">     
+                    <a href="main.html" class="btn btn-primary btn-md">login <i class="fa fa-sign-in"></i></a>
+                </span>
                 </div>
-                <!-- END SIDEBAR USERPIC -->
-                <!-- SIDEBAR USER TITLE -->
-                <div class="profile-usertitle">
-                    <div class="profile-usertitle-name">
-                        Anna
-                    </div>
-                    <div class="profile-usertitle-job">
-                        Developer
-                    </div>
                 </div>
-                <!-- END SIDEBAR USER TITLE -->
-                <!-- SIDEBAR BUTTONS -->
-                <div class="profile-userbuttons">
-                    <button type="button" class="btn btn-success btn-sm">Follow</button>
-                    <button type="button" class="btn btn-danger btn-sm">Message</button>
-                </div>
-                <!-- END SIDEBAR BUTTONS -->
-                <!-- SIDEBAR MENU -->
-                <div class="profile-usermenu">
-                    <ul class="nav">
-                        <li class="active">
-                            <a href="#">
-                            <i class="glyphicon glyphicon-home"></i>
-                            Overview </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                            <i class="glyphicon glyphicon-user"></i>
-                            Account Settings </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank">
-                            <i class="glyphicon glyphicon-ok"></i>
-                            Tasks </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                            <i class="glyphicon glyphicon-flag"></i>
-                            Help </a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- END MENU -->
-            </div>
-        </div>
-        <div class="col-md-9">
-            <div class="profile-content">
-               Some user related content goes here...
             </div>
         </div>
     </div>
-</div>
-<div class="container">
-    <div class="comp-list-wrapper">
-        <!-- Title -->
-        <div class="row">
-            <div class="col-lg-12 list-title">
-                <h3>Current Competitions</h3>
-            </div>
-        </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-lg-4 col-md-6">
-                <div class="panel">
-                    <div class="panel-heading">
-                        <div class="comp-icon"><i class="fa fa-money fa-3x"></i></div>
-                        <p>Goal: <strong>$500</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-primary" role="button">Go!</a>
-                        <a href="#" class="btn btn-default disabled" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="panel">
-                    <div class="panel-heading">
-                        <div class="comp-icon"><i class="fa fa-book fa-3x"></i></div>
-                        <p>Read: <strong>The Science of Getting Rich</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-primary" role="button">Go!</a>
-                        <a href="#" class="btn btn-default disabled" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="panel">
-                    <div class="panel-heading">
-                        <div class="comp-icon"><i class="fa fa-money fa-3x"></i><i class="fa fa-book fa-3x"></i></div>
-                        <p>Goal: <strong>$200</strong></p>
-                        <p>Read: <strong>The Warren Buffett Way</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-primary" role="button">Go!</a>
-                        <a href="#" class="btn btn-default disabled" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-        </div><!-- ./row -->
-
-
-        <!-- Title -->
-        <div class="row">
-            <div class="col-lg-12 list-title">
-                <h3>Past Competitions</h3>
-            </div>
-        </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-lg-3 col-md-3">
-                <div class="panel">
-                    <div class="panel-heading panel-past">
-                        <div class="comp-icon"><i class="fa fa-money fa-3x"></i></div>
-                        <p>Goal: <strong>$50</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-default disabled" role="button">Go!</a>
-                        <a href="#" class="btn btn-primary" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3">
-                <div class="panel">
-                    <div class="panel-heading panel-past">
-                        <div class="comp-icon"><i class="fa fa-money fa-3x"></i></div>
-                        <p>Goal: <strong>$120</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-default disabled" role="button">Go!</a>
-                        <a href="#" class="btn btn-default disabled" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3">
-                <div class="panel">
-                    <div class="panel-heading panel-past">
-                        <div class="comp-icon"><i class="fa fa-book fa-3x"></i></div>
-                        <p>Read: <strong>"The Money We'll Save" by Brock Cole.</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-default disabled" role="button">Go!</a>
-                        <a href="#" class="btn btn-primary" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3">
-                <div class="panel">
-                    <div class="panel-heading panel-past">
-                        <div class="comp-icon"><i class="fa fa-money fa-3x"></i></div>
-                        <p>Goal: <strong>$300</strong></p>
-                    </div>
-                    <div class="panel-footer">
-                        <a href="#" class="btn btn-default disabled" role="button">Go!</a>
-                        <a href="#" class="btn btn-default disabled" role="button">Claim Reward</a>
-                    </div>
-                </div>
-            </div>
-        </div><!-- ./row -->
-    </div>
-</div>
-
-
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
