--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </br>
                 <div class="wrapper">
                 <span class="group-btn">     
-                    <a href="main.html" class="btn btn-primary btn-md">login <i class="fa fa-sign-in"></i></a>
+                    <a href="main.html" class="btn btn-success btn-md">login <i class="fa fa-sign-in"></i></a>
                 </span>
                 </div>
                 </div>
