--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@ Licensed under MIT
                 <!-- SIDEBAR USER TITLE -->
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
-                        Smily
+                        Smiley
                     </div>
                     <div class="profile-usertitle-job">
                         Developer
