update rank page

--- a/money-rank.html
+++ b/money-rank.html
@@ -29,9 +29,9 @@
         <strong>Goal: $500</strong>
       </h2>
       <div class="form-group">
-        <label for="amount">Amount</label>
+        <label for="amount">Add Money</label>
         <input type="text" id="amount" />
-        <button onclick="userChart()">Go!</button>
+        <button class="btn btn-success" onclick="userChart()">Go!</button>
       </div>
       <div id="bar-1" class="bar-main-container yellow">
         <div class="wrap">
