update rank page

--- a/money-rank.html
+++ b/money-rank.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/img/favicon.ico">
 
     <title>DollarCup</title>
-
+    <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/money-rank.css">
 
 
@@ -24,7 +24,27 @@
 
 <body>
   <body>
-     <div id="container">
+
+        <div style="width: 30%; text-align: center; float: left">
+            <div class="profile-sidebar" style="height: 500px;">
+                <!-- SIDEBAR USERPIC -->
+                <div class="profile-userpic">
+                    <img src="assets/img/profile_user.jpg" class="img-responsive" alt="">
+                </div>
+                <!-- END SIDEBAR USERPIC -->
+                <!-- SIDEBAR USER TITLE -->
+                <div class="profile-usertitle">
+                    <div class="profile-usertitle-name">
+                        Smiley
+                    </div>
+                </div>
+                <!-- END SIDEBAR USER TITLE -->
+                <!-- SIDEBAR BUTTONS -->
+                <!-- END MENU -->
+            </div>
+        </div>
+        <div style="width: 70%; text-align: center; float: right">
+
       <h2>
         <strong>Goal: $500</strong>
       </h2>
@@ -79,6 +99,9 @@
         </div>
       </div>
     </div>
+
+
+ 
   </body>
 
 
