bg color; title;

--- a/main.html
+++ b/main.html
@@ -67,11 +67,6 @@ Licensed under MIT
                             Account Settings </a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">
-                            <i class="glyphicon glyphicon-ok"></i>
-                            Tasks </a>
-                        </li>
-                        <li>
                             <a href="#">
                             <i class="glyphicon glyphicon-flag"></i>
                             Help </a>
@@ -83,22 +78,28 @@ Licensed under MIT
         </div>
         <div class="col-md-9">
             <div class="profile-content">
-                <h3>You've saved $7520.95 playing DollarCup!</h3>
+                <p class="title">Stats<p>
+                <div class="row">
+                    <span class="col-md-1 trophy"><img src="assets/img/trophy.png"></span>
+                    <span class="col-md-11"><h3>You've saved $7520.95 playing DollarCup!</h3></span>
+                </div>
+                
                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                        <div class="amount-total">$7520.95<div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                        <div class="amount-total">$7520.95</div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- col-md-9 -->
     </div>
 </div>
+
 <div class="container">
     <div class="comp-list-wrapper">
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12 list-title">
-                <h3>Current Competitions</h3>
+                <h3 class="title">Current Competitions</h3>
             </div>
         </div>
         <!-- /.row -->
@@ -142,11 +143,12 @@ Licensed under MIT
             </div>
         </div><!-- ./row -->
 
+        <div class="break50px"></div>
 
         <!-- Title -->
         <div class="row">
             <div class="col-lg-12 list-title">
-                <h3>Past Competitions</h3>
+                <h3 class="title">Past Competitions</h3>
             </div>
         </div>
         <!-- /.row -->
@@ -202,7 +204,7 @@ Licensed under MIT
         </div><!-- ./row -->
     </div>
 </div>
-</br>
+<div class="break50px"></div>
 
 
 
