Committing changes to booktest.html

--- a/booktest.html
+++ b/booktest.html
@@ -12,12 +12,12 @@
     <title>DollarCup</title>
 
     <style>
-        body { line-height:;} 
-        .profile-sidebar { height: 250px; }
+        .profile-sidebar { height: 275px; }
         .left { position:relative; left: 0; display: inline; float: left; margin-right: 5%;}
         .right { position:relative; right: 0; display: inline; float: left;}
         input[type="text"] { width: 400px;}
-        .profile-sidebar form {  position: relative; left: 85px;}
+        .profile-sidebar form, a {  position: relative; left: 85px;}
+        a {  position: relative; left: 85px; top: 20px; margin-bottom: 10px;}
     </style>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 list-title">
-                <h3>Reading Test on <em>"A Clever Financial Book Title"</em></h3>
+                <h3>Competition: "The Science of Getting Rich" by Wallace Wattles</h3>
             </div>
         </div>
         <div class="row profile-sidebar">
@@ -61,9 +61,9 @@
                     <input type="radio" /> Group C<br /><br /> 
 
                     <input type="text" placeholder="Answer" />
-                </div>
-                <button>SUBMIT ALL ANSWERS</button>
+                </div><br />
             </form>
+            <a href="main.html" class="btn btn-success" role="button">Submit answers</a>
         </div>
     </div>
 </body>
