--- a/createcomp.html
+++ b/createcomp.html
@@ -7,10 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="C:\Sites\hackathon\dollar-cup\assets\images/dollar.png">
+    <link rel="icon" href="assets\images/dollar.png">
 
     <title>DollarCup - Create Competition</title>
+    
+    <style>
+        div.left { height: 200px; width: 45%; position: relative; left: 0; display: inline; float: left;}
+        div.right { height: 200px; width: 45%; position: relative; right: 0; display: inline;}
+        a { position: absolute; bottom: 0;}
+    </style>
 
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="file:///C|/Sites/hackathon/dollar-cup/assets/css/custom.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--[if lt IE 9]>
@@ -20,68 +27,82 @@
 </head>
 
 <body>
-     <div class="container_createcomp"> 
-        <h1><em>Create your competition!</em></h1>
-        <div class="cols">
-            <img src="assets/images/dollar.png" alt="" />
-            <form>
-                <div class="left">
-                    <label>Goal amount:</label> <br />
-                    <label>Start date:</label>  <br />
-                    <label>End date:</label>    
+    <div class="container">
+        <div class="comp-list-wrapper">
+            <!-- Title -->
+            <div class="row">
+                <div class="col-lg-12 list-title">
+                    <h3 class="title">Create your competition!</h3>
                 </div>
-                <div class="right">
-                    <input type="text" placeholder="$$$" /><br />
-                    <input type="date" /><br />
-                    <input type="date" /><br />
+            </div>
+
+            <!-- /.row -->
+            <div class="row profile-sidebar">
+                <div class="col-lg-4 col-md-6 ">
+                    
+                    <div class="cols">
+                        <img src="assets/images/dollar.png" alt="" />
+                        <form>
+                            <div class="left">
+                                <label>Goal amount:</label> <br />
+                                <label>Start date:</label>  <br />
+                                <label>End date:</label>    
+                            </div>
+                            <div class="right">
+                                <input type="text" placeholder="$$$" /><br />
+                                <input type="date" /><br />
+                                <input type="date" /><br />
+                            </div>
+                            <a href="main.html" class="btn btn-success" role="button">+ Add friends</a>
+                        </form>
+                    </div>
                 </div>
-                <button class="btn-primary">+ ADD FRIENDS!</button>
-            </form>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="cols">
+                        <img src="assets/images/books.png" alt="" />
+                        <form>
+                            <div class="left">
+                                <label>Goal amount:</label> <br />
+                                <label>Start date:</label>  <br />
+                                <label>End date:</label>    
+                            </div>
+                            <div class="right">
+                                <input type="text" placeholder="$$$" /><br />
+                                <input type="date" /><br />
+                                <input type="date" /><br />
+                            </div>
+                            <a href="main.html" class="btn btn-success" role="button">+ Add friends</a>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="cols">
+                        <img src="assets/images/dollar_book.png" alt="" />
+                        <form>
+                            <div class="left">
+                                <label>List of books:</label>     <br />  
+                                <label>Goal amount:</label> <br />                
+                                <label>Start date:</label>      <br />
+                                <label>Deadline: </label>       
+                            </div>
+                            <div class="right">
+                                <select>
+                                    <option>Title of Book One</option>
+                                    <option>Title of Book Two</option>
+                                    <option>Title of Book Three</option>
+                                    <option>Title of Book Four</option>
+                                </select><br />
+                                <input type="text" placeholder="$$$" /><br />
+                                <input type="date" /><br />
+                                <input type="date"/><br />
+                            </div>
+                            <a href="main.html" class="btn btn-success" role="button">+ Add friends</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="cols">
-            <img src="assets/images/books.png" alt="" />
-            <form>
-                <div class="left">
-                    <label>List of books:</label>         <br />              
-                    <label>Start date:</label>      <br />
-                    <label>Deadline: </label>       
-                </div>
-                <div class="right">
-                    <select>
-                        <option>Title of Book One</option>
-                        <option>Title of Book Two</option>
-                        <option>Title of Book Three</option>
-                        <option>Title of Book Four</option>
-                    </select><br />
-                    <input type="date" /><br />
-                    <input type="date"/><br />
-                </div>
-                <button class="btn-primary">+ ADD FRIENDS!</button>
-            </form>
-        </div>
-        <div class="cols">
-            <img src="assets/images/dollar_book.png" alt="" />
-            <form>
-                <div class="left">
-                    <label>List of books:</label>     <br />  
-                    <label>Goal amount:</label> <br />                
-                    <label>Start date:</label>      <br />
-                    <label>Deadline: </label>       
-                </div>
-                <div class="right">
-                    <select>
-                        <option>Title of Book One</option>
-                        <option>Title of Book Two</option>
-                        <option>Title of Book Three</option>
-                        <option>Title of Book Four</option>
-                    </select><br />
-                    <input type="text" placeholder="$$$" /><br />
-                    <input type="date" /><br />
-                    <input type="date"/><br />
-                </div>
-                <button class="btn-primary">+ ADD FRIENDS!</button>
-            </form>
-        </div>
-    </div>
 </body>
 </html>
