--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@ Licensed under MIT
                 <!-- END SIDEBAR USER TITLE -->
                 <!-- SIDEBAR BUTTONS -->
                 <div class="profile-userbuttons">
-                    <button type="button" class="btn btn-success btn-sm">Create</button>
+                    <a href="createcomp.html" class="btn btn-success" role="button">Create</a>
                     <button type="button" class="btn btn-danger btn-sm">Message</button>
                 </div>
                 <!-- END SIDEBAR BUTTONS -->
