--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@ Licensed under MIT
                         <p><strong>"The Science of Getting Rich" by Wallace Wattles</strong></p>
                     </div>
                     <div class="panel-footer">
-                        <a href="#" class="btn btn-success" role="button">Go!</a>
+                        <a href="booktest.html" class="btn btn-success" role="button">Go!</a>
                         <a href="#" class="btn btn-default disabled" role="button">Claim Reward</a>
                     </div>
                 </div>
