last minute changes before the presentation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div class="row">
             <div class="log-in-center">
                 <div class="form-login">
-                <h4>Welcome back.</h4>
+                    
+                <h4>Welcome back to <br><img src="assets/img/trophy.png"><b>Dollar Cup!</b></h4>
                 <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username" />
                 </br>
                 <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password" />
